[B]Version 1.1.104[/B]
- chaturbate - fix refresh images
- taboofantasy - fix playback