@@ -1,3 +1,4 @@
 [B]Version 1.1.104[/B]
 - chaturbate - fix refresh images
 - taboofantasy - fix playback
+- favorites - fix sitenames
